# Booent

./: .gitignore  Cargo.toml  README.md  TODO.md
.sqlx/: query-046a5c760463c5bc628bc9c38885579e2f10bacfd095ca20cce93a602aaf9f6c.json  query-1e3ca2d602c828f75003df6f6f66bd5019929ce10bdd10a5f26bb2a67ade96c7.json  query-29de8b646f5bcc84e4a6baaba880074d0ad68730bbb85147f8d0a8e2e5f38f1f.json  query-2c9ba41982512a7a9d65edede5ba10d6f4913f8736e2711fe956fa3bcab536c0.json  query-2d9304d162dbedf4897291942bed05305621525ec33043e8d5f0fb4303ba9747.json  query-357fe9ff9b1e4539ea54066e9f432e6bd497b61e8623a98e8be482a59efc40e4.json  query-3a4ff4445af0415a15fc3d7b6e5b9a5c60eb00cf9ffc1ad8ca9953a056acb5ca.json  query-3e33679303ab3463d3fb43be9ccf58da4d92b7efc22d0c89e27b9f6ef5da4389.json  query-4af1678d118b23ebdbcb83bc6e781842440774ecb30963052dda2c6398efb689.json  query-4e2dc2b8ab7a81ba12757e59dabda0d64633dfb749da51a1fc47f5f79c462f40.json  query-5a7510ebb86eccda498ea8227dc31258a2e3880491ef644cebb5614ef28af318.json  query-71f35017b4984c0e77416533f51804ccf3c9b7dffefb39377c1b236e40b7f5fc.json  query-78cc30ab95549caf4828a78b48bd8f0d03526f97bcb52cf6b38965298ed959c1.json  query-7957a6d06810f6c944cded04234106ba420b3fca235ea71d8c5c952d206a6c37.json  query-7aaa2bb43c0030e5c7c3dc50ffa5b943faed91888d95cb7abfd9a22710c245c0.json  query-87df49df252be88d77814dac789616183a56bdc0513b528373504aaf43c7979b.json  query-894c6b1cf2fc6dcdb5b69c7d960e1e7bdb8e7c0148cfafe54d861bbb299abc8f.json  query-ac81b6b3d41f5a289f06aae6a15ea86617698151e7c5b9f9d4e1e31e4db92924.json  query-ace1e40951f0889fa31b787f8af923be43f00801c8c6029e0acf7c6e15708d4c.json  query-ad9cf8aa4ae14ed17c667fd4ba782ccaa287540f1a4ed831fe086821ed3e90fe.json  query-b6b3f04e578f182a0ca46cb3e1ebdb008e0efc354169e08ca1091a0e0951b74d.json  query-ca35097e4cd258059e4e32d16978182f608a6168ec8432df67745ac935892b50.json  query-cbba6eacbd4aa1a08155673babe1dde1942a268ab698e9ad731925ec356faf3e.json  query-d1ca88470229df369c342b733e9818379f18d6662718c8b1db26db55073d8188.json  query-f23f2699b1ce4f5d322b0ee9f71db52e65ea4fc3d0b731f259cfc9af001d0dd6.json  query-f35cc0fdf62e04e68bce5fedd555389cc6c682924aa6bbb3402a677d86067820.json  query-f7fffd9a1274207eec6d8a445f6738a267dfc30a307f646b2749224fa6539c34.json  query-f98d17b2e033fb07318a754432ffd37bf885c98701e6db8a873f1448ef635b85.json
apps/api/: Cargo.toml  server.rs
apps/api/src/: app.rs  main.rs  middleware.rs  server.rs  traits.rs  utils.rs
apps/api/src/api_models/: admin.rs  amenities.rs  auth.rs  common_models.rs  hotels.rs  mod.rs
apps/api/src/app_state/: builder.rs  mod.rs
apps/api/src/routes/: admin.rs  amenities.rs  auth.rs  health.rs  hotels.rs  mod.rs
config/: development.toml
crates/admin/: Cargo.toml  README.md  enums.rs
crates/admin/src/: services.rs
crates/auth/: Cargo.toml  README.md  jwt.rs  types.rs
crates/auth/src/: google_auth.rs  lib.rs  transformers.rs
crates/auth/src/user_management/: jwt.rs  mod.rs  services.rs  token.rs  verifiers.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: cache.rs  common_enums.rs  consts.rs  encryption.rs  errors.rs  lib.rs  time.rs
crates/common/src/app_state/: builder.rs  mod.rs
crates/common/src/db/: hotels_interface.rs  mod.rs  sessions_interface.rs  users_interface.rs
crates/common/src/db/models/: hotel_users.rs  hotels.rs  mod.rs  sessions.rs  users.rs
crates/common/src/db/queries/: add_user.sql  check_user_owns_hotel.sql  create_hotel.sql  create_hotel_user.sql  create_room_type.sql  create_session.sql  delete_hotel_amenities.sql  delete_room_amenities.sql  delete_room_type_image.sql  find_hotel_by_name_email.sql  find_session_by_id.sql  find_user_by_provider_identity.sql  find_user_by_user_id.sql  get_amenities_by_ids.sql  get_hotel_amenities.sql  get_room_amenities.sql  get_room_type_by_id.sql  get_room_type_image_by_id.sql  get_room_type_images.sql  insert_hotel_amenities.sql  insert_room_amenities.sql  insert_room_type_beds.sql  insert_room_type_image.sql  update_hotel.sql  update_hotel_branding.sql  update_hotel_status.sql  update_session.sql  update_session_by_hash.sql
crates/common/src/domain_models/: auth.rs  common.rs  hotels.rs  mod.rs  room_types.rs
crates/common/src/runtime_config/: app_config.rs  builder.rs  mod.rs  runtime_config.rs
crates/hotels/: Cargo.toml  README.md
crates/hotels/src/: amenities.rs  lib.rs  services.rs  utils.rs
docs/: CODEBASE.md  PROJECT_SETUP.md
migrations/: 20260114155818_create_zone_and_zonal_limit.down.sql  20260114155818_create_zone_and_zonal_limit.up.sql  20260304172306_user_table.up.sql  20260308133537_create_sessions_table.up.sql  20260325173336_create_hotels.sql.down.sql  20260325173336_create_hotels.sql.up.sql  20260329092030_create_hotel_users_table.down.sql  20260329092030_create_hotel_users_table.up.sql  20260407155247_make_check_times_nullable.down.sql  20260407155247_make_check_times_nullable.up.sql  20260407164311_change_hotel_default_status_to_inactive.down.sql  20260407164311_change_hotel_default_status_to_inactive.up.sql  20260411103429_create_amenities_table.down.sql  20260411103429_create_amenities_table.up.sql  20260411103430_create_hotel_room_amenities_tables.down.sql  20260411103430_create_hotel_room_amenities_tables.up.sql  20260411103431_create_amenities_indexes.down.sql  20260411103431_create_amenities_indexes.up.sql  20260411103432_add_is_paid_to_amenities.down.sql  20260411103432_add_is_paid_to_amenities.up.sql  20260411103433_make_display_order_not_null.down.sql  20260411103433_make_display_order_not_null.up.sql  20260411103434_create_amenity_categories_table.down.sql  20260411103434_create_amenity_categories_table.up.sql  20260411103435_add_category_id_to_amenities.down.sql  20260411103435_add_category_id_to_amenities.up.sql  20260411103436_seed_amenity_categories.down.sql  20260411103441_seed_amenities.down.sql  (+28 more)
(+12 files in other folders)
