[workspace]
members = [
  "apps/api",
  "crates/auth",
  "crates/hotels",
  "crates/inventory",
  "crates/bookings",
  "crates/billing",
  "crates/search",
  "crates/admin",
  "crates/common"
]

# --- Async runtime ---
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

# --- Database ---
sqlx = { version = "0.7",features = ["postgres", "runtime-tokio-rustls","uuid","chrono"]}

resolver = "2"
