[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
# Web framework
axum = "0.7"
axum-server = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
serde = {version = "1.0", features = ["derive"] }
error-stack = "0.4"
secrecy = "0.8"

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }


# Shared internal crates
runtime_config = {path = "../../crates/runtime_config"}
common = { path = "../../crates/common" }
auth = { path = "../../crates/auth" }
hotels = { path = "../../crates/hotels" }
inventory = { path = "../../crates/inventory" }
bookings = { path = "../../crates/bookings" }
billing = { path = "../../crates/billing" }
search = { path = "../../crates/search" }
admin = { path = "../../crates/admin" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cookie = { version = "0.18", features = ["secure"] }
time = { version = "0.3", features = ["serde"] }
axum-extra = { version = "0.9", features = ["cookie"] }
uuid = { version = "1", features = ["v4"] }