[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
error-stack = "0.4"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde"] }
