[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = {version = "1.0", features = ["derive"] }
error-stack = "0.4"
pii = "0.1"
secrecy = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
log = "0.4"
common = { path = "../../crates/common" }


