[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = {version = "1.0", features = ["derive"] }
error-stack = "0.4"
pii = "0.1"
secrecy = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
log = "0.4"
time = { version = "0.3", features = ["serde", "macros"] }
common = { path = "../../crates/common" }
runtime_config = {path = "../../crates/runtime_config"}
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"


