[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
error-stack = "0.4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
pii = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2"