[package]
name = "hotels"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common" }
runtime_config = {path = "../../crates/runtime_config"}

uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
error-stack = "0.4"
serde_json = "1"
